# basic_opengl_starter

./: .gitignore  CMakeLists.txt  compile_commands.json
include/: camera.h  const.h  display.h  gl_headers.h  shader.h  triangle.h  util.h
include/glad/: glad.h
shaders/: triangle.vs
src/: camera.cpp  display.cpp  glad.cpp  main.cpp  shader.cpp  triangle.cpp  util.cpp
